

SET(TEST_LINKED_LIBRARIES 
    ${OpenCV_LIBS} 
    ${BORIS_MATH_LIBRARIES} ${BORIS_PNC_COMMON_LIBRARIES}
    )

SET(TEST_INCLUDED_DIRS (
    ${OpenCV_INCLUDE_DIRS})
    ${BORIS_MATH_INCLUDE_DIRS} ${BORIS_PNC_COMMON_INCLUDE_DIRS}
    )

add_executable(TestTimer TestTimer.cpp)
target_link_libraries(TestTimer ${TEST_LINKED_LIBRARIES} )